archived/archived_yamls/traefik-forward-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
spec:
  forwardAuth:
    # Service is created in default namespace below
    address: http://traefik-forward-auth.default.svc.cluster.local:4181
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-header
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-User: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: jlphillips/traefik-forward-auth:phillips-lab
          name: traefik-forward-auth
          ports:
            - containerPort: 4181
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - name: auth-http
      port: 4181
      targetPort: 4181
---
# Example IngressRoute showing how to attach the middleware.
# This does NOT affect deepeco.local unless you change Host() and apply it.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deepeco.local`)
      kind: Rule
      services:
        - name: service-name
          port: 80
      middlewares:
        - name: traefik-forward-auth
